Document the standalone's Java runtime requirement
Add a Requirements section to README.md stating that running the O3
standalone needs Java 17+ (the supported LTS; CI validates on 21), and
that Java 8 and 11 will not start it — the launcher's default JVM args
use --add-opens (Java 9+) and -Djava.security.manager=allow (Java 12+).
Verified empirically against JDK 8/11/16/17.

Also correct the shipped end-user README.txt, which still claimed the
stale "Java 6+" from the 2.x era.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_0157WUcM8iQwfLCskT71NkAH